--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.12.2",
     "bootstrap-icons": "^1.13.1",
     "bootstrap-icons-vue": "^1.11.3",
+    "libphonenumber-js": "^1.12.31",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
